# OpenPortfolioLabs

./: LICENSE  README.md  pyproject.toml
docs/: ideas.md  roadmap.md
docs/docs/: vision.md
src/openportfoliolabs/: returns.py
tests/: test_returns.py
