[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "openportfoliolabs"
version = "0.1.0"
description = "Open-source portfolio analysis, historical backtesting and Monte Carlo simulation."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Stephen Balfe" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]